(chore) fix scroll issue on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
-.background {
+:root {
+  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+  }
+}
+
+body {
+  background: linear-gradient(
+    to bottom,
+    transparent,
+    rgb(var(--background-end-rgb))
+  )
+  rgb(var(--background-start-rgb));
+  color: rgb(var(--foreground-rgb));
+}
+
+body {
   background: linear-gradient(
     180deg,
     hsl(235, 16%, 14%) 0%,
     hsl(230, 17%, 10%) 100%
-  );
-  position: relative;
-  overflow: hidden;
+  )
+  hsl(235, 16%, 14%) 0%
+;
 }
 
 .timeInput {
